@@ -1,18 +1,13 @@
-## Getting Started
+Project Name: CalculationCrunch
 
-Welcome to the VS Code Java world. Here is a guideline to help you get started to write Java code in Visual Studio Code.
+Team Name: MAC mathematics 
 
-## Folder Structure
+Team Members: Alexa Tallo, Crystal Shamo, Miray Noeel
 
-The workspace contains two folders by default, where:
+This is an online learning program, which helps beginner math students pratice simple arithmetic skills. It helps students practice basic concepts. Students are able to choose between multiplication, divison, addition, and subtraction. Each option takes the user to a space themed game in which the goal is to get the rocket to the moon by answering 10 questions correctly. The rocket moves upwards as questions are answered correctly.
 
-- `src`: the folder to maintain sources
-- `lib`: the folder to maintain dependencies
+How to run this application, Java 17 and JavaFX 19 resources are required. To run the .jar file while you are in the same directory, the user must type the following into their terminal:
 
-Meanwhile, the compiled output files will be generated in the `bin` folder by default.
+java --module-path (your_file_path)/javafx-sdk-19/lib --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing -jar CalculationCrunch.jar
 
-> If you want to customize the folder structure, open `.vscode/settings.json` and update the related settings there.
-
-## Dependency Management
-
-The `JAVA PROJECTS` view allows you to manage your dependencies. More details can be found [here](https://github.com/microsoft/vscode-java-dependency#manage-dependencies).
+Once the application is running, click on the menubar and find the option you are looking for. Press on which operation you would like to practice and once you are inside the game, you will be given randomized questions. Type in your answer in the text field and press submit to check whether it is right or wrong. Once your answer is checked, hit the "continue" button to continue practicing. If you want to return to the main menu, click the "home" button. We hope you enjoy the game and use it to better your mathematical abilities! For more details about how to use this application or information about what our project does, please refer to the User Manual and Implementation Manual provided.
